fix horizontal scroll

--- a/src/components/HorizontalScroll.scss
+++ b/src/components/HorizontalScroll.scss
@@ -2,6 +2,8 @@
 @import '../common/styles/mixins';
 
 .horizontal-scroll {
+  position: relative;
+
   &__left,
   &__right {
     position: absolute;
